# RAG_against_the_machine

./: .gitignore  profile_performance.py  pyproject.toml  test_system.py
data/output/: test_index_bm25.pkl
data/output/search_results/: Dataset_2025-09-21_valid_unanswered.json
datasets/: Dataset_2025-09-21_valid_answered.json  Dataset_2025-09-21_valid_unanswered.json
src/: __main__.py  chunking.py  config.py  evaluation.py  indexing.py  llm_generator.py  models.py  retrieval.py
