[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "RAG system for vLLM repository question answering"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "pydantic>=2.0.0",
    "fire>=0.5.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "flake8>=6.0.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
